syntax = "proto3";

package com.conversation;

option java_multiple_files = true;
option java_package = "com.conversation.grpc";
option java_outer_classname = "BedrockServiceProto";

// Request configuration message
message GenerationConfig {
  int32 max_tokens = 1;
  float temperature = 2;
  float top_p = 3;
  repeated string stop_sequences = 4;
}

// Request message containing the query text
message GenerateRequest {
  string query = 1;
  GenerationConfig config = 2;
}

// Generation metadata message
message GenerationMetadata {
  int32 tokens_generated = 1;
  float completion_time = 2;
  string status = 3;
}

// Response message containing the generated text
message GenerateResponse {
  string response = 1;
  string model = 2;
  GenerationMetadata metadata = 3;
}

// Error message for failed requests
message ErrorResponse {
  string error_message = 1;
  string error_code = 2;
  string details = 3;
}

// Service definition for Bedrock communication
service BedrockService {
  // Main RPC method to generate text responses
  rpc Generate (GenerateRequest) returns (GenerateResponse) {}
}